--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.8",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
