--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-dom": "18.2.0",
     "react-native": "^0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
