--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "^50.0.14",
+    "expo": "~50.0.15",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.73.6",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "^1.11.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^9.2.0",
