--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
