--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6",
     "uuid": "^9.0.1"
