--- a/app.json
+++ b/app.json
@@ -34,10 +34,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.akto.drinkinggame"
     },
     "web": {
       "favicon": "./assets/icon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e715e0ff-d90d-4695-ade5-ceaa4951a3d3"
+      }
     }
   }
 }
